tests/error/array_incompatible.gw
#! [contains] contains incompatible types
[new Object, 1];
